--- a/css/home.css
+++ b/css/home.css
@@ -1,29 +1,18 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    min-height: 100vh;
-}
-
-#home{
+#home {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url("../images/shopping\ \(1\).png");
+    background-image: url("../images/shopping (1).png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #A6FFA1;
+    background-color: #A6FFA1; /* Soft green */
     background-position: center;
-    /* width: 100%; */
 }
 
-
-
-nav ul{
+/* Navigation */
+nav ul {
     padding: 15px;
     position: absolute;
     top: 0;
@@ -31,41 +20,45 @@ nav ul{
     display: flex;
     list-style: none;
     gap: 20px;
-
-    li a{
-
-        text-decoration: none;
-    }
 }
 
-h1{
+nav ul li a {
+    text-decoration: none;
+    color: #A09EBB; /* Soft purple */
+    font-weight: bold;
+}
+
+h1 {
     font-size: 70px;
     text-align: center;
     max-width: 600px;
-    color: #A09EBB;
+    color: #A09EBB; /* Soft purple */
     line-height: 65px;
     margin-bottom: 20px;
 }
 
-p{
+p {
     max-width: 350px;
     text-align: center;
-    color: #A09EBB;
+    color: #B5D2CB; /* Soft teal */
     font-weight: 100;
     margin-bottom: 20px;
 }
 
-
-.intro__button{
+/* Buttons */
+.intro__button {
     padding: 10px;
     width: 300px;
     border: none;
-    color: #A09EBB;
+    background-color: #A8AEC1; /* Neutral gray-blue */
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
 }
 
-.intro__button:hover{
+.intro__button:hover {
     cursor: pointer;
-    background-color: #A09EBB;
+    background-color: #A09EBB; /* Soft purple */
     color: white;
-    transition: all 1s;
+    transition: all 0.5s;
 }
