--- a/css/service.css
+++ b/css/service.css
@@ -1,14 +1,22 @@
+#services{
+    display: flex;
+}
+
+
 aside{
     display: flex;
-    
 }
 
 .side__gaming{
+    padding: 50px;
     margin: none;
     background-color: #A09EBB;
-    line-height: -1px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     p{
-        color: white;
+        color: #BFFFBc;
+        line-height: 25px;
     }
 }
 
@@ -56,4 +64,12 @@ aside{
 }
 .card button:hover {
     background: #0056b3;
+}
+
+.back-home{
+    margin: 20px 0 20px 0;
+    width: 100%;
+    height: 30px;
+    background-color: #A6FFA1;
+    border: none;
 }
