changed the entire UI

--- a/css/contact.css
+++ b/css/contact.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #A09EBB;
+    background-color: #ffffff;
     min-height: 100dvh;
     width: 100%;
 }
@@ -13,7 +13,7 @@
 }
 
 .contact__text{
-    background-color:  #A6FFA1;
+    background-color:  #A09EBB;
     width: 600px;
     display: flex;
     align-items: center;
@@ -31,7 +31,7 @@
     }
     h2{
         font-size: 40px;
-        color: #A09EBB;;
+        color: #ffffff;;
     }
 }
 
