--- a/css/home.css
+++ b/css/home.css
@@ -1,91 +1,138 @@
-body{
-    background-color: #A09EBB
+body {
+  /*background-color: #A09EBB
     #A8AEC1
     #B5D2CB
     #BFFFBc
     #A6FFA1
-    #FFFFFF;
+    #FFFFFF;*/
+  font-family: "Poppins", sans-serif;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    min-height: 100vh;
-}
-
-#home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-image: url("../images/shopping\ \(1\).png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #A6FFA1;
-    background-position: center;
-    /* width: 100%; */
-    p{
-        max-width: 350px;
-        text-align: center;
-        color: #A09EBB;
-        font-weight: 100;
-        margin-bottom: 20px;
-    }
-}
-
-
-
-nav ul{
-    align-items: center;
-    padding: 20px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    list-style: none;
-    gap: 20px;
-
-    li a{
-
-        text-decoration: none;
-    }
-}
-
-h1{
-    font-size: 70px;
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
+  background-image: url("../images/shopping(1).jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #ffffff;
+  background-position: center;
+  /* width: 100%; */
+  p {
+    max-width: 350px;
     text-align: center;
-    max-width: 600px;
-    color: #A09EBB;
-    line-height: 65px;
+    color: #a09ebb;
+    font-weight: 500;
     margin-bottom: 20px;
+    z-index: 1;
+  }
 }
 
-.intro__button{
-    padding: 10px;
-    width: 300px;
-    border: none;
-    color: #A09EBB;
-}
-
-.intro__button:hover{
-    cursor: pointer;
-    background-color: #A09EBB;
-    color: white;
-    transition: all 1s;
-}
-
-input[type="search"]{
-    border: none;
-    padding: 5px;
-}
-
-.sign__up{
-    border: none;
+#home::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
     background-color: white;
-    padding: 5px;
-    width: 100px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+}
+
+nav ul {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  z-index: 1;
+  li a {
+    text-decoration: none;
+  }
+}
+
+h1 {
+  font-size: 70px;
+  text-align: center;
+  max-width: 600px;
+  color: #a09ebb;
+  line-height: 65px;
+  margin-bottom: 20px;
+  z-index: 1;
+}
+
+.intro__button {
+  font-weight: bold;
+  font-family: "Inter", sans-serif;
+  padding: 10px;
+  width: 300px;
+  border: none;
+  color: #ffffff;
+  background-color: #a09ebb;
+  z-index: 1;
+}
+
+.intro__button:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
+  color: white;
+  transition: ease 0.5s;
+}
+
+input[type="search"] {
+  border: none;
+  padding: 10px 10px 10px 30px;
+  background-color: white;
+  border-radius: 30px;
+  width: 100%;
+  color: black;
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  border: 1.5px solid #A09EBB;
+}
+
+input[type="search"]:focus {
+  outline: none;
+  border: 2px solid #A09EBB;
+}
+
+.input__container {
+    position: relative;
+    width: 250px;
+}
+
+.input__container i {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: gray;
+}
+
+.sign__up {
+  border: none;
+  background-color: #a09ebb;
+  padding: 15px;
+  width: 100px;
+  li a {
+    font-family: "Inter", sans-serif;
+    color: white;
+  }
+}
+
+.sign__in{
+    padding: 8px;
+    border: 2px solid #A09EBB;
 }
