--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,10 @@
 body {
-  /*background-color: #A09EBB
+  /* background-color: #A09EBB
     #A8AEC1
     #B5D2CB
     #BFFFBc
     #A6FFA1
-    #FFFFFF;*/
+    #FFFFFF; */
   font-family: "Poppins", sans-serif;
 }
 
@@ -42,7 +42,7 @@ body {
     top: 0;
     background-color: white;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     opacity: 0.7;
 }
 
@@ -57,7 +57,7 @@ nav ul {
   display: flex;
   list-style: none;
   gap: 20px;
-  z-index: 1;
+  z-index: 2;
   li a {
     text-decoration: none;
   }
