--- a/css/service.css
+++ b/css/service.css
@@ -1,13 +1,5 @@
-#services{
-    display: flex;
-}
 
-
-aside{
-    display: flex;
-}
-
-.side__gaming{
+/* .side__gaming{
     padding: 50px;
     margin: none;
     background-color: #A09EBB;
@@ -18,16 +10,15 @@ aside{
         color: #BFFFBc;
         line-height: 25px;
     }
-}
+} */
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 5fr));
+    gap: 25px;
     padding: 20px;
 }
+
 .card {
     background: white;
     border-radius: 10px;
@@ -57,19 +48,19 @@ aside{
     margin-top: 10px;
     padding: 10px 15px;
     border: none;
-    background: #007bff;
+    background: #6f7394;
     color: white;
     border-radius: 5px;
     cursor: pointer;
 }
 .card button:hover {
-    background: #0056b3;
+    background: #7772c5;
 }
 
-.back-home{
+/* .back-home{
     margin: 20px 0 20px 0;
     width: 100%;
     height: 30px;
     background-color: #A6FFA1;
     border: none;
-}
+} */
